Fixed css to wrap text in blockquotes

--- a/benbakle.com/Content/Site.css
+++ b/benbakle.com/Content/Site.css
@@ -111,6 +111,9 @@ button {
     font-family: Calibri;
 }
 
+blockquote{
+    word-wrap:break-word;
+}
 .modal-content {
     padding: 0 10px;
 }
